update react and react-dom

--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "bootstrap": "4.0.0-alpha.6",
     "color-thief": "^2.2.2",
     "color-thief-standalone": "^1.0.3",
+    "envvars": "^0.1.0",
     "moment": "^2.18.1",
     "node-vibrant": "^3.0.0-alpha.2",
-    "react": "^15.6.1",
+    "react": "^16.0.0",
     "react-color": "^2.13.4",
-    "react-dom": "^15.6.1",
+    "react-dom": "^16.0.0",
     "react-dropzone": "^4.1.0",
     "react-loadable": "^4.0.4",
     "react-redux": "^5.0.6",
