--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
+    "canvas": "^1.6.7",
     "color-thief": "^2.2.2",
     "color-thief-standalone": "^1.0.3",
     "envvars": "^0.1.0",
